//============================================================================//
//                                                                            //
//                Copyright Â© 2015 - 2020 Subterranean Security               //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation at:                                //
//                                                                            //
//    https://mozilla.org/MPL/2.0                                             //
//                                                                            //
//=========================================================S A N D P O L I S==//
syntax = "proto3";

package core.instance;

import "com/sandpolis/core/foundation/platform.proto";
import "com/sandpolis/core/instance/metatypes.proto";

option java_package = "com.sandpolis.core.instance";
option optimize_for = CODE_SIZE;

message ProtoAttributeValue {
    int64 timestamp = 1;

    repeated string  string   = 2;
    repeated int32   integer  = 3;
    repeated int64   long     = 4;
    repeated bool    boolean  = 5;
    repeated double  double   = 6;
    repeated bytes   bytes    = 7;
}

message ProtoAttribute {
    repeated ProtoAttributeValue values = 1;
}

message ProtoDocument {
    bool partial = 1;
    bool removed = 2;

    map<int32, ProtoAttribute> attribute = 3;
    map<int32, ProtoDocument> document = 4;
    map<int32, ProtoCollection> collection = 5;
}

message ProtoCollection {
    bool partial = 1;
    bool removed = 2;

    map<int32, ProtoDocument> document = 3;
}
